tests/errors/error_syntax_invalid_identifier.c
int 123x = 10; // Identifiers cannot start with digits
